multipackage/p4test-err-msg.txt
Using latest version of p4test as of 2017-Jul-19:

% p4test example-arch-use.p4
example-arch-use.p4(140): error: main: Cannot unify package Egress to package Egress
Switch(ig1, eg1) main;
                 ^^^^
